plugins {
    id 'com.android.application'
}

android {
    compileSdk 35
    namespace "cn.leaf.wavingleaf"

    defaultConfig {
        applicationId "cn.leaf.wavingleaf"
        minSdk 26
        targetSdk 35
        versionCode 4
        versionName "1.2.1"

//        ndk{
//            abiFilters 'armeabi-v7a', 'arm64-v8a'
//        }
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug{
            minifyEnabled false
            shrinkResources false
        }
//        debug {
//            minifyEnabled true
//            shrinkResources true
//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
//        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    buildFeatures {
        viewBinding true
    }
    packagingOptions{
        exclude 'META-INF/DEPENDENCIES'
//        exclude 'META-INF/INDEX.LIST'
    }
}

dependencies {
    implementation 'androidx.activity:activity:1.8.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

//    def sshd_version = "2.12.1"
    def sshd_version = "2.15.0"
    // https://mvnrepository.com/artifact/org.apache.sshd/sshd-contrib
//    implementation "org.apache.sshd:sshd-contrib:$sshd_version"
    implementation "org.apache.sshd:sshd-common:$sshd_version"
    implementation "org.apache.sshd:sshd-core:$sshd_version"
    implementation "org.apache.sshd:sshd-sftp:$sshd_version"
//    implementation "org.apache.sshd:sshd-netty:$sshd_version"
//    SFTP组件调试用，否则不输出日志的
//    implementation 'org.slf4j:slf4j-simple:2.0.17'

//    增加ftp的功能时再启用
    implementation 'org.apache.ftpserver:ftplet-api:1.2.0'
    implementation 'org.apache.ftpserver:ftpserver-core:1.2.0'

    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.greenrobot:eventbus:3.3.1'
//    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
//    def room_version = "2.5.2"
    def room_version = "2.7.0"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
}